deploy/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: detec
  labels:
    app.kubernetes.io/name: detec
