deploy/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: detec-api
  namespace: detec
spec:
  selector:
    app: detec-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
    - name: gateway
      port: 8001
      targetPort: 8001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: detec-gateway
  namespace: detec
spec:
  selector:
    app: detec-api
  ports:
    - name: gateway
      port: 8001
      targetPort: 8001
  type: LoadBalancer
